--- a/myFirstapp/angular.json
+++ b/myFirstapp/angular.json
@@ -10,7 +10,7 @@
       "prefix": "app",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "sass"
+          "style": "scss"
         }
       },
       "architect": {
@@ -22,6 +22,11 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
+            "stylePreprocessorOptions":{
+              "includePaths": [
+                "node_modules"
+              ]
+            },
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -29,7 +34,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/bootstrap/js/dist/index.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
